# Simple-GAN

./: pyproject.toml  readme.MD
gan/: gan.py  model.py  paths.py  train.py
gan/config/: train.yaml
gan/config/dataset/: mnist.yaml
gan/config/model/: mnist.yaml
